--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+name: 'Auto Release Draft'
+description: 'Drafts a GitHub release with changes introduced by a newly created version tag'
+author: 'Marina Roca'
 runs:
   using: 'node16'
   main: 'dist/index.js'
