--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Restore dependencies
-      - run: npm ci
+        run: npm ci
       - name: Build          
-      - run: npm run all
+        run: npm run all
