--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Create a release draft for version tag
         id: create-release-draft
-        run: npm run all
-        #uses: ./
+        uses: ./
       - name: Print the URL of the release draft
         run: echo ${{ steps.create-release-draft.outputs.release-url }}
